--- a/index.html
+++ b/index.html
@@ -2,5 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>个人主页</title>
+    <meta http-equiv="refresh" content="0; URL=https://user.qzone.qq.com/3595513331/infocenter">
+    <title>正在跳转到邓大瞎的QQ空间</title>
+</head>
+<body>
+    <p>如果大哥你的浏览器没有自动调整，就点击这个<a href="https://user.qzone.qq.com/3595513331/infocenter">here</a>.</p>
+</body>
+</html>
