--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; URL=https://user.qzone.qq.com/3595513331/infocenter">
+    <meta http-equiv="refresh" content="0; URL=http://wpa.qq.com/msgrd?v=3&uin=3593313331&site=qq&menu=yes
+">
     <title>正在跳转到邓大瞎的QQ空间</title>
 </head>
 <body>
-    <p>如果大哥你的浏览器没有自动调整，就点击这个<a href="https://user.qzone.qq.com/3595513331/infocenter">here</a>.</p>
+    <p>如果大哥你的浏览器没有自动调整，就点击这个<a href="http://wpa.qq.com/msgrd?v=3&uin=3595513331&site=qq&menu=yes
+">here</a>.</p>
 </body>
 </html>
