--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; URL=http://wpa.qq.com/msgrd?v=3&uin=3593313331&site=qq&menu=yes
+    <meta http-equiv="refresh" content="0; URL=https://qm.qq.com/q/aydhHfsUYE
+
 ">
     <title>正在跳转到邓大瞎的QQ空间</title>
 </head>
 <body>
-    <p>如果大哥你的浏览器没有自动调整，就点击这个<a href="http://wpa.qq.com/msgrd?v=3&uin=3595513331&site=qq&menu=yes
+    <p>如果大哥你的浏览器没有自动调整，就点击这个<a href="https://qm.qq.com/q/aydhHfsUYE
+
 ">here</a>.</p>
 </body>
 </html>
