--- a/index.html
+++ b/index.html
@@ -1,13 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-
-">
-    <title>正在跳转到邓大瞎的QQ空间</title>
+<meta http-equiv="refresh" content="0;url=https://medium.com/@godengjuan"> 
 </head>
 <body>
- 
-
+<p>如果浏览器不支持自动跳转,请点击:<a href="https://medium.com/@godengjuan">这里</a>进行手动跳转。</p>
 </body>
 </html>
